#INCLUDE(Test)
ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK) 
SET (TARGET_NAME KOHONEN_NN_TEST)

ADD_EXECUTABLE (${TARGET_NAME}
    main.cpp
    kohonen_nn_test.cpp
)

TARGET_LINK_LIBRARIES (${TARGET_NAME}
    kohonen_nn
    weight_vector
    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
)

ADD_TEST (NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
