#INCLUDE(Test)
ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK) 
SET (TARGET_NAME QUALITY_MEASURES_TEST)

ADD_EXECUTABLE (${TARGET_NAME}
    main.cpp
    quality_measures_test.cpp
)

TARGET_LINK_LIBRARIES (${TARGET_NAME}
    quality_measures
    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
)

ADD_TEST (NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
