#INCLUDE(Test)
ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK) 
SET (TARGET_NAME WEIGHT_VECTOR_TEST)

ADD_EXECUTABLE (${TARGET_NAME}
    main.cpp
    weight_vector_cont_euclidean_test.cpp
)

TARGET_LINK_LIBRARIES (${TARGET_NAME}
    ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
)

ADD_TEST (NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
